# Monopoly

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.orig  Dice.cpp  Land.cpp  Land.h  Main.qml  MovePoint.h  Player.cpp  Player.h  README.md  UseCardSetting.cpp  UseCardSetting.h  eventHandler.cpp  eventHandler.h  land.cpp  land.h  main.cpp  map.cpp  map.h  mapHandler.cpp  mapHandler.h
Dice/: Dice.cpp  Dice.h
Handler/EventHandler/: eventHandler.cpp  eventHandler.h  eventHandlerGetterSetter.cpp
Handler/MapHandler/: mapHandler.cpp  mapHandler.h
Hospital/: Hospital.cpp  Hospital.h
ItemCard/Base/: ItemCard.cpp  ItemCard.h
ItemCard/DestroyImmovableCard/: DestroyImmovableCard.h
ItemCard/DiceControl/: DiceControlCard.h
ItemCard/RandomEventCard/: RandomEventCard.h
ItemCard/RoadblockCard/: RoadblockCard.h
ItemCard/RocketCard/: RocketCard.h
Land/: Land.cpp  Land.h
Map/: map.cpp  map.h
MiniGames/DragonGate/: DragonGate.cpp  DragonGate.h
MiniGames/HorseRacing/: HorseRacing.cpp  HorseRacing.h
MiniGames/InBetween/: InBetween.cpp  InBetween.h
MovePoint/: MovePoint.cpp  MovePoint.h
Player/: Player.cpp  Player.h
Resources/: resourse.qrc
Resources/json/: card.json  command.json  config.json  country.json  event.json
Shop/: shop.cpp  shop.h
StateDisplay/: StateDisplay.cpp  StateDisplay.h
UI/: Bankruptcy_popUp.qml  BuyLand_popUp.qml  CardOpenBtn.qml  CardPopup.qml  CheatCommandLine.qml  CheatCommandOpenBtn.qml  Dice.qml  DragonGate.qml  EndPopUp.qml  HorseRacing.qml  Hospital_popup.qml  InBetween.qml  Main.qml  Message_popUp.qml  RefreshPopup.qml  ShopPopup.qml  StateContainer.qml  Turntable.qml  UpgradeOrSell_popUp.qml
UI/baseWidget/: CostumBtn_Rec.qml  Standard_Text.qml
UseCardSetting/: UseCardSetting.cpp  UseCardSetting.h
json/: country.json  dialogue.json  event.json
